examples/datalog/16_vectors/11_nan_in_vector.dl
% Test: NaN in vector (edge case)
% Expected: Vectors with special values handled
% Category: 16_vectors
% Priority: P2 - Vector edge cases

.kg create test_vec_nan
.kg use test_vec_nan

% Normal vectors
+vecs[(1, [1.0, 2.0, 3.0]), (2, [4.0, 5.0, 6.0])].

dist(Id1, Id2, D) :- vecs(Id1, V1), vecs(Id2, V2), Id1 < Id2, D = euclidean_distance(V1, V2).

?- dist(Id1, Id2, D).

.kg use default
.kg drop test_vec_nan
